modify the rest of check-point 2 parts

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nuclear power plant with the following techno-economic parameters:\n",
+    "# Techno-economic parameters of the nuclear power plant:\n",
     "lifetime = 40 # years\n",
     "interest = 0.05 # unit: -\n",
     "CAPEX = 8594135 # $/MW\n",
@@ -304,13 +304,12 @@
    "outputs": [],
    "source": [
     "annualized_capex = calculate_annualised_capex(CAPEX, interest, lifetime)\n",
-    "\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"nuclear_power_plant\",\n",
     "    bus='electricity',\n",
-    "    marginal_cost=VOM + fuel_cost/efficiency, #$/MWh\n",
-    "    capital_cost= annualized_capex + FOM, #$/MW\n",
+    "    marginal_cost=VOM + fuel_cost/efficiency, # $/MWh\n",
+    "    capital_cost= annualized_capex + FOM, # $/MW\n",
     "    p_nom_extendable = True,  # Allow endogenous investment\n",
     "    efficiency=efficiency, \n",
     ")"
@@ -338,13 +337,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gas-fired power plant techno-economic parameters are given as:\n",
-    "lifetime = 25\n",
-    "interest = 0.05\n",
-    "CAPEX = 995257 # $/MW\n",
-    "FOM = 33234 # $/MW fixed\n",
-    "VOM = 5  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWhth - per unit gas consumed\n",
+    "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
+    "lifetime = 25 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 904779 # $/MW\n",
+    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "VOM = 4.55  # $/MWh variable\n",
+    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -360,8 +359,8 @@
     "    class_name=\"Generator\",\n",
     "    name=\"gas_power_plant\",\n",
     "    bus='electricity',\n",
-    "    marginal_cost=VOM + fuel_cost/efficiency, #$/MWh\n",
-    "    capital_cost= annualized_capex + FOM, #$/MW\n",
+    "    marginal_cost=VOM + fuel_cost/efficiency, # $/MWh\n",
+    "    capital_cost= annualized_capex + FOM, # $/MW\n",
     "    p_nom_extendable = True,  # Allow endogenous investment\n",
     "    efficiency=efficiency, \n",
     ")"
