--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -434,9 +434,9 @@
     "***\n",
     "Check-point 3:\n",
     "\n",
-    "**Add a VRE power plant to the network: Solar PV with extendable capacity.**\n",
+    "**Add a Variable Renewable Energy (VRE) power plant to the network: Solar PV with extendable capacity.**\n",
     "\n",
-    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation**"
+    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation."
    ]
   },
   {
@@ -473,8 +473,8 @@
    "source": [
     "# Import an example daily pattern\n",
     "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
-    "# annual time-series availability of solar farm(just a simplified example)\n",
-    "yearly_avail = pd.Series(list(solar_pattern) *365, index=network.snapshots)"
+    "# annual time-series availability of solar farm (just a simplified example)\n",
+    "yearly_avail = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -499,13 +499,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solar farm techno-economic parameters are given as:\n",
-    "lifetime = 37.5\n",
-    "interest = 0.05\n",
-    "CAPEX = 744227  # $/MW\n",
-    "FOM = 12856.5  # $/MW fixed\n",
-    "VOM = 0.0106  # $/MWh variable\n",
-    "fuel_cost = 0  # per unit of sun consumed"
+    "# Techno-economic parameters of the solar farm:\n",
+    "lifetime = 37.5 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 676570 # $/MW\n",
+    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106 # $/MWh\n",
+    "fuel_cost = 0 # per unit of solar irradiation consumed"
    ]
   },
   {
@@ -521,7 +521,7 @@
     "    name=\"solar_farm\",\n",
     "    bus='electricity',\n",
     "    marginal_cost=VOM,\n",
-    "    capital_cost=annualized_capex,\n",
+    "    capital_cost=annualized_capex + FOM,\n",
     "    p_nom_extendable=True,\n",
     "    p_max_pu=yearly_avail,  # Solar farm availability\n",
     ")"
@@ -531,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ending of check-point 3 - Solve network, analyse results and export network"
+    "Ending of check-point 3: Solve network, analyze results and export network"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect solar farm interaction with other powerplants to supply loads\n",
+    "# Inspect solar farm interaction with other power plants to supply loads\n",
     "network.generators['p_nom_opt']"
    ]
   },
