--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\long.nguyen\\anaconda3\\envs\\pypsa-agora\\lib\\site-packages\\pypsa\\networkclustering.py:16: UserWarning: The namespace `pypsa.networkclustering` is deprecated and will be removed in PyPSA v0.24. Please use `pypsa.clustering.spatial instead`. \n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pypsa\n",
     "import pandas as pd\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +27,7 @@
     "*** \n",
     "Check-point 1:\n",
     "\n",
-    "**Build a network in PyPSA with one node (`bus`) named \"Utopia\" and attach an electricity load (`load`) to it. For simplicity, we assume the load profile to be flat for now. Afterwards, we want to supply electricy by attaching one gas-fired power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
+    "**Build a network in PyPSA with one node (`bus`) named \"Utopia\" and attach an electricity load (`load`) to it. For simplicity, we assume the load profile to be flat for now. Afterwards, we want to supply electricity by attaching one gas-fired power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
     "\n",
     "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
    ]
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a gas generator at the electricity bus with a capacity of 200MW and marginal cost of 20$/MWh to the network?"
+    "Add a gas-fired power plant at the electricity bus with a capacity of `200MW` and marginal cost of `20$/MWh` to the network."
    ]
   },
   {
@@ -114,14 +105,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating gas-fired powerplant\n",
+    "# Creating a gas-fired power plant\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"gas_power_plant\",\n",
     "    bus=???,\n",
     "    carrier=\"gas\",\n",
-    "    ???=200,\n",
-    "    ???=20,  # marginal cost of gas-fired power plant ($/MWh)\n",
+    "    ???=200, # unit: MW\n",
+    "    ???=20, # unit: $/MWh\n",
     ")\n"
    ]
   },
@@ -146,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets look at some results! Back to read the docs. How would you look at results?"
+    "Lets look at some results! Back to [readthedocs](https://pypsa.readthedocs.io/en/latest/user-guide/components.html#network). How would you look at results?"
    ]
   },
   {
@@ -182,7 +173,7 @@
     "***\n",
     "Check-point 2:\n",
     "\n",
-    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the LOPF.**"
+    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the linear optimization problem with power flow (LOPF).**"
    ]
   },
   {
@@ -216,24 +207,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a nuclear powerplant to your network based on provided CAPEX, FOM, VOM, fuel_cost, efficiency, interest rate and lifetime.\n",
+    "Add a nuclear power plant to your network based on the provided capital expenditure (CAPEX), fixed operation & maintenance cost (FOM), variable operation & maintenance cost (VOM), fuel cost, efficiency, interest rate and lifetime.\n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA's technology database (https://github.com/PyPSA/technology-data)"
+    "> **Source:** all costs for the example are taken from [PyPSA's technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nuclear power plant techno-economic parameters are given as:\n",
-    "lifetime = 40\n",
-    "interest = 0.05\n",
-    "CAPEX = 9453549 # $/MW\n",
-    "FOM = 120060  # $/MW fixed\n",
-    "VOM = 3.9 # $/MWh variable\n",
-    "fuel_cost = 3.75 # $/MWhth per unit Uranium consumed\n",
+    "# Techno-economic parameters of the nuclear power plant:\n",
+    "lifetime = 40 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 8594135 # $/MW\n",
+    "FOM = 0.0127 * CAPEX  # $/MW per year (1.27% of CAPEX)\n",
+    "VOM = 3.55 # $/MWh\n",
+    "fuel_cost = 3.41 # $/MWh_th per unit Uranium consumed\n",
     "efficiency = 0.326"
    ]
   },
@@ -263,8 +254,8 @@
     "    class_name=\"Generator\",\n",
     "    name=\"nuclear_power_plant\",\n",
     "    bus=???,\n",
-    "    marginal_cost=???, #$/MWh\n",
-    "    capital_cost=???, #$/MW\n",
+    "    marginal_cost=???, # $/MWh\n",
+    "    capital_cost=???, # $/MW\n",
     "    p_nom_extendable=???,  # Allow endogenous investment\n",
     "    efficiency=efficiency, \n",
     ")"
@@ -283,13 +274,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gas-fired power plant techno-economic parameters are given as:\n",
-    "lifetime = 25\n",
-    "interest = 0.05\n",
-    "CAPEX = 995257 # $/MW\n",
-    "FOM = 33234 # $/MW fixed\n",
-    "VOM = 5  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWhth - per unit gas consumed\n",
+    "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
+    "lifetime = 25 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 904779 # $/MW\n",
+    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "VOM = 4.55  # $/MWh variable\n",
+    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -352,7 +343,7 @@
     "***\n",
     "Check-point 3:\n",
     "\n",
-    "**Add a VRE power plant to the network: Solar PV with extendable capacity.** \n",
+    "**Add a Variable Renewable Energy (VRE) power plant to the network: Solar PV with extendable capacity.**\n",
     "\n",
     "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation."
    ]
@@ -376,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
     "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
     "# annual time-series availability of solar farm(just a simplified example)\n",
-    "yearly_avail = pd.Series(list(solar_pattern) *365, index=network.snapshots)"
+    "yearly_avail = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -399,13 +390,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solar farm techno-economic parameters are given as:\n",
-    "lifetime = 37.5\n",
-    "interest = 0.05\n",
-    "CAPEX = 744227  # $/MW\n",
-    "FOM = 12856.5  # $/MW fixed\n",
-    "VOM = 0.0106  # $/MWh variable\n",
-    "fuel_cost = 0  # per unit of sun consumed"
+    "# Techno-economic parameters of the solar farm:\n",
+    "lifetime = 37.5 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 676570 # $/MW\n",
+    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106 # $/MWh\n",
+    "fuel_cost = 0 # per unit of solar irradiation consumed"
    ]
   },
   {
@@ -423,7 +414,7 @@
     "    marginal_cost=???,\n",
     "    capital_cost=???,\n",
     "    ???=True,\n",
-    "    ???=yearly_avail,  # Solar farm availability\n",
+    "    ???=yearly_avail, # Solar farm availability\n",
     ")"
    ]
   },
@@ -431,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ending of check-point 3 - Solve network, analyse results and export network"
+    "Ending of check-point 3: Solve network, analyze results and export network"
    ]
   },
   {
@@ -450,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect solar farm interaction with other powerplants to supply loads\n",
+    "# Inspect solar farm interaction with other power plants to supply loads\n",
     "???"
    ]
   },
@@ -482,8 +473,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
