review the second check-point of exercise 2

--- a/day 1/exercise_2_adding_storage_units.ipynb
+++ b/day 1/exercise_2_adding_storage_units.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a pumped-storage hydro power plant to the network with a fixed energy-to-power ratio of `8 hours`. The rated capacity of the plant should be endogenously decided by the model. All other techno-economic parameters are provided.\n",
+    "Add a pumped hydro storage to the network with a fixed energy-to-power ratio of `8 hours`. The rated capacity of the plant should be endogenously decided by the model. All other techno-economic parameters are provided.\n",
     "\n",
     "> **Source:** all costs for this example are taken from [Danish energy agency technology database for energy storage](https://ens.dk/en/our-services/technology-catalogues/technology-data-energy-storage)."
    ]
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Techno-economic parameters of the pumped-storage hydro power plant:\n",
+    "# Techno-economic parameters of the pumped hydro storage:\n",
     "lifetime = 50 # years\n",
     "interest = 0.05 # unit: -\n",
     "CAPEX = 600000 # $/MW\n",
@@ -206,23 +206,19 @@
     "Check-point 2:\n",
     "\n",
     "**How to force investment into storage?**\n",
-    "#### TASK: Modify the network to make it invest in either of storage options\n",
     "\n",
-    "> **Hint: None of the two storage options are invested because storage is not as cost optimal as continue using solar and gas.** "
+    "_TASK: Modify the network to make it invest in either of storage options_\n",
+    "\n",
+    "> **Hint: None of the two storage options are invested because storage is not as cost optimal as continue using solar and gas-fired power plants.** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ANSWERS FOR EXERSISE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Option 1: Making cost of storage options to as lower as the model invest in instead of use other generators"
+    "**Option 1:**\n",
+    "\n",
+    "Reducing the cost of storage options to encourage the model to prioritize investing in storage instead of other generation methods."
    ]
   },
   {
@@ -231,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import checkpoint point 1 network\n",
+    "# import check-point 1 network from exercise 2\n",
     "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
    ]
   },
@@ -288,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect storage interaction with other powerplants to supply loads\n",
+    "# Inspect storage interaction with other power plants to supply loads\n",
     "???"
    ]
   },
@@ -296,7 +292,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Option 2: Having some initial filling for storage\n",
+    "**Option 2:**\n",
+    "\n",
+    "Having some initial filling for storage\n",
     "\n",
     "> **Remarks:You can use `state_of_charge_initial` to set initial filling of an storage.**"
    ]
@@ -307,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import checkpoint point 1 network\n",
+    "# import check-point 1 network from exercise 2\n",
     "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
    ]
   },
@@ -317,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adding inital filling of storage to cover first 8 hours without sun\n",
+    "# Adding initial filling of storage to cover the first 8 hours\n",
     "???"
    ]
   },
