--- a/day 1/exercise_2_adding_storage_units_solution.ipynb
+++ b/day 1/exercise_2_adding_storage_units_solution.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a pumped-storage hydro power plant to the network with a fixed energy-to-power ratio of `8 hours`. The rated capacity of the plant should be endogenously decided by the model. All other techno-economic parameters are provided.\n",
+    "Add a pumped hydro storage to the network with a fixed energy-to-power ratio of `8 hours`. The rated capacity of the plant should be endogenously decided by the model. All other techno-economic parameters are provided.\n",
     "\n",
     "> **Source:** all costs for this example are taken from [Danish energy agency technology database for energy storage](https://ens.dk/en/our-services/technology-catalogues/technology-data-energy-storage)."
    ]
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Techno-economic parameters of the pumped-storage hydro power plant:\n",
+    "# Techno-economic parameters of the pumped hydro storage:\n",
     "lifetime = 50 # years\n",
     "interest = 0.05 # unit: -\n",
     "CAPEX = 600000 # $/MW\n",
@@ -234,16 +234,19 @@
     "Check-point 2:\n",
     "\n",
     "**How to force investment into storage?**\n",
-    "#### TASK: Modify the network to make it invest in either of storage options\n",
     "\n",
-    "> **Hint: None of the two storage options are invested because storage is not as cost optimal as continue using solar and gas.** "
+    "_TASK: Modify the network to make it invest in either of storage options_\n",
+    "\n",
+    "> **Hint: None of the two storage options are invested because storage is not as cost optimal as continue using solar and gas-fired power plants.** "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Option 1: Making cost of storage options to as lower as the model invest in instead of use other generators"
+    "**Option 1:**\n",
+    "\n",
+    "Reducing the cost of storage options to encourage the model to prioritize investing in storage instead of other generation methods."
    ]
   },
   {
@@ -252,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import checkpoint point 1 network\n",
+    "# import check-point 1 network from exercise 2\n",
     "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
    ]
   },
@@ -318,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect storage interaction with other powerplants to supply loads\n",
+    "# Inspect storage interaction with other power plants to supply loads\n",
     "load = n.loads_t.p \n",
     "pow_gen = n.generators_t.p\n",
     "storage = n.storage_units_t.p\n",
@@ -332,15 +335,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = result.loc[:,~result.columns.isin(['electricity_load', 'nuclear_power_plant'])] # drop load and nuclear columns\n",
-    "plot.iloc[:48,:].plot(kind='bar', stacked=True)"
+    "# First drop the load and nuclear generation columns\n",
+    "plot = result.loc[:,~result.columns.isin(['electricity_load', 'nuclear_power_plant'])]\n",
+    "plot.iloc[:48,:].plot(kind='bar', stacked=True, figsize=(14,5))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Option 2: Having some initial filling for storage\n",
+    "**Option 2:**\n",
+    "\n",
+    "Having some initial filling for storage\n",
     "\n",
     "> **Remarks:You can use `state_of_charge_initial` to set initial filling of an storage.**"
    ]
@@ -351,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import checkpoint point 1 network\n",
+    "# import check-point 1 network from exercise 2\n",
     "n = pypsa.Network(\"../results/network_d1_e2-1.nc\")"
    ]
   },
@@ -361,8 +367,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adding inital filling of storage to cover first 8 hours without sun\n",
-    "n.storage_units.loc['pumped_hydro_storage', 'state_of_charge_initial'] = 200*8 # load * 8hours"
+    "# Adding initial filling of storage to cover the first 8 hours\n",
+    "load = n.loads.loc[\"electricity_load\", \"p_set\"]\n",
+    "max_hours = n.storage_units.loc['pumped_hydro_storage', \"max_hours\"]\n",
+    "n.storage_units.loc['pumped_hydro_storage', 'state_of_charge_initial'] = load * max_hours"
    ]
   },
   {
@@ -397,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect capacity of other plants\n",
+    "# Inspect nominal capacity of other plants\n",
     "n.generators['p_nom_opt']"
    ]
   },
@@ -414,13 +422,8 @@
     "result = pd.concat([pow_gen, storage, load], axis=1)\n",
     "\n",
     "plot = result.loc[:,~result.columns.isin(['electricity_load', 'nuclear_power_plant'])] # drop load and nuclear columns\n",
-    "plot.iloc[:48,:].plot(kind='bar', stacked=True)"
+    "plot.iloc[:48,:].plot(kind='bar', stacked=True, figsize=(14,5))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
