clear all exercise outputs in day 2

--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -53,7 +53,8 @@
     "   1. A hydrogen store inside this bus.\n",
     "5. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricity by attaching two renewable power plants implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/index.html#documentation) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/latest/user-guide/optimal-power-flow.html).**\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [minimal lopf example](https://pypsa.readthedocs.io/en/latest/examples/lopf-with-heating.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
+    "\n",
     "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
    ]
   },
@@ -237,7 +238,7 @@
    "source": [
     "Add a wind generator at the electricity bus with a initial capacity of `100MW`, maximum capacity of `500MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime? The name of the generator can be `onshore_wind`. \n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
+    "> **Source:** all costs for the example are taken from [PyPSA technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv) and the assumptions in year 2023 in [EU map of hydrogen production costs](https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
   },
   {
@@ -288,7 +289,7 @@
    "source": [
     "Add a solar generator at the electricity bus with a initial capacity of `10MW`, maximum capacity of `500MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime? The name of the generator can be `solar`. \n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
+    "> **Source:** all costs for the example are taken from [PyPSA technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv) and the assumptions in year 2023 in [EU map of hydrogen production costs](https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
   },
   {
@@ -328,7 +329,7 @@
    "source": [
     "Add an electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
+    "> **Source:** all costs for the example are taken from [PyPSA technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv) and the assumptions in year 2023 in [EU map of hydrogen production costs](https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
   },
   {
@@ -459,7 +460,7 @@
    "source": [
     "Add a hourly hydrogen load at the hydrogen bus according to the daily pattern of industrial hydrogen demand (`100MW per hour` from 1am to 7pm, and with a shutodwn of 5 hours). The name of the load can be `hydroge_load`\n",
     "\n",
-    "**To set hourly hydrogen demand, you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year.For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/index.html#documentation) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/latest/user-guide/optimal-power-flow.html).**"
+    "**To set hourly hydrogen demand, you have to call [`network.set_snapshots`](https://pypsa.readthedocs.io/en/latest/api/_source/pypsa.Network.set_snapshots.html) to select a year.For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**"
    ]
   },
   {
@@ -494,7 +495,7 @@
    "source": [
     "Add an electrolyser link including compressor, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, water_cost, efficiency, interest rate and lifetime.\n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
+    "> **Source:** all costs for the example are taken from [PyPSA technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv) and the assumptions in year 2023 in [EU map of hydrogen production costs](https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
   },
   {
