--- a/day 2/excercise_2_hydrogen_storage.ipynb
+++ b/day 2/excercise_2_hydrogen_storage.ipynb
@@ -37,8 +37,7 @@
     "3. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/index.html#documentation) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/latest/user-guide/optimal-power-flow.html).**\n",
-    "\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/stable/user-guide/optimal-power-flow.html).**\n",
     "\n",
     "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
    ]
