--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add `200MW` load to each of the bus"
+    "Add `200MW` load to each bus"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can madd instead of add to add multiple components at once\n",
+    "# You can 'madd' instead of 'add' to add multiple components at once\n",
     "???"
    ]
   },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,23 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gas-fired power plant techno-economic parameters are given as:\n",
-    "lifetime = 25\n",
-    "interest = 0.05\n",
-    "CAPEX = 995257 # $/MW\n",
-    "FOM = 33234 # $/MW fixed\n",
-    "VOM = 5  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWhth - per unit gas consumed\n",
+    "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
+    "lifetime = 25 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 904779 # $/MW\n",
+    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "VOM = 4.55  # $/MWh variable\n",
+    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,34 +143,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
     "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
-    "# annual time-series availability of solar farm(just a simplified example)\n",
+    "# annual time-series availability of solar farm (just a simplified example)\n",
     "yearly_avail = pd.Series(list(solar_pattern) *365, index=network.snapshots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solar farm techno-economic parameters are given as:\n",
-    "lifetime = 37.5\n",
-    "interest = 0.05\n",
-    "CAPEX = 744227  # $/MW\n",
-    "FOM = 12856.5  # $/MW fixed\n",
-    "VOM = 0.0106  # $/MWh variable\n",
-    "fuel_cost = 0  # per unit of sun consumed"
+    "# Techno-economic parameters of the solar farm:\n",
+    "lifetime = 37.5 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 676570 # $/MW\n",
+    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106 # $/MWh\n",
+    "fuel_cost = 0 # per unit of solar irradiation consumed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,12 +181,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add bi-direction links between `North` and `South`"
+    "Add a bi-directional link between `North` and `South`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "            bus0=???,\n",
     "            bus1=???,\n",
     "            p_nom_extendable=???, # allow flexible capacity expansion\n",
-    "            p_min_pu=???) # to allow bi-directional "
+    "            p_min_pu=???) # to allow bi-directional flow"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect transmission flow interaction with other powerplants to supply loads at north bus\n",
+    "# Inspect transmission flow interaction with other power plants to supply loads at north bus\n",
     "???\n"
    ]
   },
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize network"
+    "Initialize network"
    ]
   },
   {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,23 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gas-fired power plant techno-economic parameters are given as:\n",
-    "lifetime = 25\n",
-    "interest = 0.05\n",
-    "CAPEX = 995257 # $/MW\n",
-    "FOM = 33234 # $/MW fixed\n",
-    "VOM = 5  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWhth - per unit gas consumed\n",
+    "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
+    "lifetime = 25 # years\n",
+    "interest = 0.05 # unit: -\n",
+    "CAPEX = 904779 # $/MW\n",
+    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "VOM = 4.55  # $/MWh variable\n",
+    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,12 +358,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add link representing gas-fired power plant converting gas into electricity"
+    "Add link representing gas-fired power plant converting gas into electricity.\n",
+    "\n",
+    "> Note: The marginal and capital costs in `links` are defined for the inlet bus (`bus0`), before efficiency losses. Therefore, the marginal and capital costs for the gas-fired power plant which are given per unit of produced electricity, should be converted into the costs per unit of supplied gas by multiplying to the efficiency."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
