reformat all exercises based on black suggestions

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(class_name=\"Load\", bus='electricity', name=\"electricity_load\", p_set=100)"
+    "network.add(class_name=\"Load\", bus=\"electricity\", name=\"electricity_load\", p_set=100)"
    ]
   },
   {
@@ -137,11 +137,11 @@
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"gas_power_plant\",\n",
-    "    bus='electricity',\n",
+    "    bus=\"electricity\",\n",
     "    carrier=\"gas\",\n",
-    "    p_nom=200, # unit: MW\n",
+    "    p_nom=200,  # unit: MW\n",
     "    marginal_cost=20,  # unit: $/MWh\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -274,12 +274,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the nuclear power plant:\n",
-    "lifetime = 40 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 8594135 # $/MW\n",
+    "lifetime = 40  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 8594135  # $/MW\n",
     "FOM = 0.0127 * CAPEX  # $/MW per year (1.27% of CAPEX)\n",
-    "VOM = 3.55 # $/MWh\n",
-    "fuel_cost = 3.41 # $/MWh_th per unit Uranium consumed\n",
+    "VOM = 3.55  # $/MWh\n",
+    "fuel_cost = 3.41  # $/MWh_th per unit Uranium consumed\n",
     "efficiency = 0.326"
    ]
   },
@@ -307,11 +307,11 @@
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"nuclear_power_plant\",\n",
-    "    bus='electricity',\n",
-    "    marginal_cost=VOM + fuel_cost/efficiency, # $/MWh\n",
-    "    capital_cost= annualized_capex + FOM, # $/MW\n",
-    "    p_nom_extendable = True,  # Allow endogenous investment\n",
-    "    efficiency=efficiency, \n",
+    "    bus=\"electricity\",\n",
+    "    marginal_cost=VOM + fuel_cost / efficiency,  # $/MWh\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    p_nom_extendable=True,  # Allow endogenous investment\n",
+    "    efficiency=efficiency,\n",
     ")"
    ]
   },
@@ -338,12 +338,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
-    "lifetime = 25 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 904779 # $/MW\n",
-    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "lifetime = 25  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 904779  # $/MW\n",
+    "FOM = 0.0334 * CAPEX  # $/MW per year (3.34% of CAPEX)\n",
     "VOM = 4.55  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
+    "fuel_cost = 24.57  # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -358,11 +358,11 @@
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"gas_power_plant\",\n",
-    "    bus='electricity',\n",
-    "    marginal_cost=VOM + fuel_cost/efficiency, # $/MWh\n",
-    "    capital_cost= annualized_capex + FOM, # $/MW\n",
-    "    p_nom_extendable = True,  # Allow endogenous investment\n",
-    "    efficiency=efficiency, \n",
+    "    bus=\"electricity\",\n",
+    "    marginal_cost=VOM + fuel_cost / efficiency,  # $/MWh\n",
+    "    capital_cost=annualized_capex + FOM,  # $/MW\n",
+    "    p_nom_extendable=True,  # Allow endogenous investment\n",
+    "    efficiency=efficiency,\n",
     ")"
    ]
   },
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.generators['p_nom_opt']"
+    "network.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.generators[['capital_cost', 'marginal_cost', 'p_nom_extendable']]"
+    "network.generators[[\"capital_cost\", \"marginal_cost\", \"p_nom_extendable\"]]"
    ]
   },
   {
@@ -472,7 +472,9 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar farm (just a simplified example)\n",
     "yearly_avail = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
@@ -500,12 +502,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the solar farm:\n",
-    "lifetime = 37.5 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 676570 # $/MW\n",
-    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
-    "VOM = 0.0106 # $/MWh\n",
-    "fuel_cost = 0 # per unit of solar irradiation consumed"
+    "lifetime = 37.5  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 676570  # $/MW\n",
+    "FOM = 0.017275 * CAPEX  # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106  # $/MWh\n",
+    "fuel_cost = 0  # per unit of solar irradiation consumed"
    ]
   },
   {
@@ -514,12 +516,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annualized_capex = calculate_annualised_capex(capex=CAPEX, interest=interest, lifetime=lifetime)\n",
+    "annualized_capex = calculate_annualised_capex(\n",
+    "    capex=CAPEX, interest=interest, lifetime=lifetime\n",
+    ")\n",
     "\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"solar_farm\",\n",
-    "    bus='electricity',\n",
+    "    bus=\"electricity\",\n",
     "    marginal_cost=VOM,\n",
     "    capital_cost=annualized_capex + FOM,\n",
     "    p_nom_extendable=True,\n",
@@ -551,7 +555,7 @@
    "outputs": [],
    "source": [
     "# Inspect solar farm interaction with other power plants to supply loads\n",
-    "network.generators['p_nom_opt']"
+    "network.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -561,7 +565,7 @@
    "outputs": [],
    "source": [
     "gen = network.generators_t.p\n",
-    "gen[['solar_farm', 'gas_power_plant']].head(50).plot(kind='area', stacked=True)"
+    "gen[[\"solar_farm\", \"gas_power_plant\"]].head(50).plot(kind=\"area\", stacked=True)"
    ]
   },
   {
@@ -570,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.buses_t.marginal_price['electricity'].sort_values(ascending=False)"
+    "network.buses_t.marginal_price[\"electricity\"].sort_values(ascending=False)"
    ]
   },
   {
