--- a/day 1/exercise_2_adding_storage_units_solution.ipynb
+++ b/day 1/exercise_2_adding_storage_units_solution.ipynb
@@ -84,8 +84,8 @@
    "outputs": [],
    "source": [
     "# You can modify network's component values directly via component's DataFrame, but make sure to locate correct index.\n",
-    "load_id = n.loads[n.loads.bus == 'electricity'].index\n",
-    "n.loads.loc[load_id, 'p_set'] = 200"
+    "load_id = n.loads[n.loads.bus == \"electricity\"].index\n",
+    "n.loads.loc[load_id, \"p_set\"] = 200"
    ]
   },
   {
@@ -127,14 +127,14 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the pumped hydro storage:\n",
-    "lifetime = 50 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 600000 # $/MW\n",
-    "FOM = 0.015 * CAPEX # $/MW per year (between 1% and 2% of the CAPEX)\n",
-    "VOM = 3.9 # $/MWh\n",
-    "fuel_cost = 0 # $/MWh_th per unit water consumed\n",
-    "efficiency_store = 0.8 # assuming similar storing and discharging efficiencies\n",
-    "efficiency_dispatch = 0.8 # assuming similar storing and discharging efficiencies"
+    "lifetime = 50  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 600000  # $/MW\n",
+    "FOM = 0.015 * CAPEX  # $/MW per year (between 1% and 2% of the CAPEX)\n",
+    "VOM = 3.9  # $/MWh\n",
+    "fuel_cost = 0  # $/MWh_th per unit water consumed\n",
+    "efficiency_store = 0.8  # assuming similar storing and discharging efficiencies\n",
+    "efficiency_dispatch = 0.8  # assuming similar storing and discharging efficiencies"
    ]
   },
   {
@@ -154,9 +154,9 @@
     "    p_nom_extendable=True,\n",
     "    efficiency_store=efficiency_store,\n",
     "    efficiency_dispatch=efficiency_dispatch,\n",
-    "    p_max_pu=1, # Discharging availability\n",
-    "    p_min_pu=-1, # Charging availability\n",
-    "    max_hours=8, # energy-to-power ratio\n",
+    "    p_max_pu=1,  # Discharging availability\n",
+    "    p_min_pu=-1,  # Charging availability\n",
+    "    max_hours=8,  # energy-to-power ratio\n",
     ")"
    ]
   },
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n.generators['p_nom_opt']"
+    "n.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "outputs": [],
    "source": [
     "# Remove capital costs of storage plants\n",
-    "n.storage_units.loc['pumped_hydro_storage', 'capital_cost'] = 0"
+    "n.storage_units.loc[\"pumped_hydro_storage\", \"capital_cost\"] = 0"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "# Inspect capacity of pumped hydro storage\n",
-    "n.storage_units.loc['pumped_hydro_storage', 'p_nom_opt']"
+    "n.storage_units.loc[\"pumped_hydro_storage\", \"p_nom_opt\"]"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "outputs": [],
    "source": [
     "# Inspect capacity of other plants\n",
-    "n.generators['p_nom_opt']"
+    "n.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "outputs": [],
    "source": [
     "# Inspect storage interaction with other power plants to supply loads\n",
-    "load = n.loads_t.p \n",
+    "load = n.loads_t.p\n",
     "pow_gen = n.generators_t.p\n",
     "storage = n.storage_units_t.p\n",
     "result = pd.concat([pow_gen, storage, load], axis=1)\n",
@@ -336,8 +336,8 @@
    "outputs": [],
    "source": [
     "# First drop the load and nuclear generation columns\n",
-    "plot = result.loc[:,~result.columns.isin(['electricity_load', 'nuclear_power_plant'])]\n",
-    "plot.iloc[:48,:].plot(kind='bar', stacked=True, figsize=(14,5))"
+    "plot = result.loc[:, ~result.columns.isin([\"electricity_load\", \"nuclear_power_plant\"])]\n",
+    "plot.iloc[:48, :].plot(kind=\"bar\", stacked=True, figsize=(14, 5))"
    ]
   },
   {
@@ -369,8 +369,10 @@
    "source": [
     "# Adding initial filling of storage to cover the first 8 hours\n",
     "load = n.loads.loc[\"electricity_load\", \"p_set\"]\n",
-    "max_hours = n.storage_units.loc['pumped_hydro_storage', \"max_hours\"]\n",
-    "n.storage_units.loc['pumped_hydro_storage', 'state_of_charge_initial'] = load * max_hours"
+    "max_hours = n.storage_units.loc[\"pumped_hydro_storage\", \"max_hours\"]\n",
+    "n.storage_units.loc[\"pumped_hydro_storage\", \"state_of_charge_initial\"] = (\n",
+    "    load * max_hours\n",
+    ")"
    ]
   },
   {
@@ -396,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n.storage_units['p_nom_opt']"
+    "n.storage_units[\"p_nom_opt\"]"
    ]
   },
   {
@@ -406,7 +408,7 @@
    "outputs": [],
    "source": [
     "# Inspect nominal capacity of other plants\n",
-    "n.generators['p_nom_opt']"
+    "n.generators[\"p_nom_opt\"]"
    ]
   },
   {
@@ -416,13 +418,15 @@
    "outputs": [],
    "source": [
     "# Inspect storage interaction with other powerplants to supply loads\n",
-    "load = n.loads_t.p \n",
+    "load = n.loads_t.p\n",
     "pow_gen = n.generators_t.p\n",
     "storage = n.storage_units_t.p\n",
     "result = pd.concat([pow_gen, storage, load], axis=1)\n",
     "\n",
-    "plot = result.loc[:,~result.columns.isin(['electricity_load', 'nuclear_power_plant'])] # drop load and nuclear columns\n",
-    "plot.iloc[:48,:].plot(kind='bar', stacked=True, figsize=(14,5))"
+    "plot = result.loc[\n",
+    "    :, ~result.columns.isin([\"electricity_load\", \"nuclear_power_plant\"])\n",
+    "]  # drop load and nuclear columns\n",
+    "plot.iloc[:48, :].plot(kind=\"bar\", stacked=True, figsize=(14, 5))"
    ]
   }
  ],
