--- a/day 1/exercise_3_working_with_pypsa_links.ipynb
+++ b/day 1/exercise_3_working_with_pypsa_links.ipynb
@@ -123,12 +123,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
-    "lifetime = 25 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 904779 # $/MW\n",
-    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "lifetime = 25  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 904779  # $/MW\n",
+    "FOM = 0.0334 * CAPEX  # $/MW per year (3.34% of CAPEX)\n",
     "VOM = 4.55  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
+    "fuel_cost = 24.57  # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -148,9 +148,11 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar farm (just a simplified example)\n",
-    "yearly_avail = pd.Series(list(solar_pattern) *365, index=network.snapshots)"
+    "yearly_avail = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
   },
   {
@@ -160,12 +162,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the solar farm:\n",
-    "lifetime = 37.5 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 676570 # $/MW\n",
-    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
-    "VOM = 0.0106 # $/MWh\n",
-    "fuel_cost = 0 # per unit of solar irradiation consumed"
+    "lifetime = 37.5  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 676570  # $/MW\n",
+    "FOM = 0.017275 * CAPEX  # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106  # $/MWh\n",
+    "fuel_cost = 0  # per unit of solar irradiation consumed"
    ]
   },
   {
@@ -242,7 +244,7 @@
    "outputs": [],
    "source": [
     "# Inspect transmission flow interaction with other power plants to supply loads at north bus\n",
-    "???\n"
+    "???"
    ]
   },
   {
@@ -327,12 +329,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
-    "lifetime = 25 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 904779 # $/MW\n",
-    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "lifetime = 25  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 904779  # $/MW\n",
+    "FOM = 0.0334 * CAPEX  # $/MW per year (3.34% of CAPEX)\n",
     "VOM = 4.55  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
+    "fuel_cost = 24.57  # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -472,13 +474,14 @@
     "# adding an atmostphere bus\n",
     "???\n",
     "\n",
-    "# adding theoretical storage to store co2 released to the atmosphere \n",
-    "network.add(\"Store\",\n",
-    "  \"co2_atmosphere_storage\",\n",
-    "  e_nom_extendable=True, # allow infinite co2\n",
-    "  carrier=\"co2\",\n",
-    "  bus=\"co2_atmosphere\"\n",
-    "  )"
+    "# adding theoretical storage to store co2 released to the atmosphere\n",
+    "network.add(\n",
+    "    class_name=\"Store\",\n",
+    "    name=\"co2_atmosphere_storage\",\n",
+    "    e_nom_extendable=True,  # allow infinite co2\n",
+    "    carrier=\"co2\",\n",
+    "    bus=\"co2_atmosphere\",\n",
+    ")"
    ]
   },
   {
