--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -219,12 +219,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the nuclear power plant:\n",
-    "lifetime = 40 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 8594135 # $/MW\n",
+    "lifetime = 40  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 8594135  # $/MW\n",
     "FOM = 0.0127 * CAPEX  # $/MW per year (1.27% of CAPEX)\n",
-    "VOM = 3.55 # $/MWh\n",
-    "fuel_cost = 3.41 # $/MWh_th per unit Uranium consumed\n",
+    "VOM = 3.55  # $/MWh\n",
+    "fuel_cost = 3.41  # $/MWh_th per unit Uranium consumed\n",
     "efficiency = 0.326"
    ]
   },
@@ -275,12 +275,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the gas-fired combined cycle power plant (CCGT):\n",
-    "lifetime = 25 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 904779 # $/MW\n",
-    "FOM = 0.0334 * CAPEX # $/MW per year (3.34% of CAPEX)\n",
+    "lifetime = 25  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 904779  # $/MW\n",
+    "FOM = 0.0334 * CAPEX  # $/MW per year (3.34% of CAPEX)\n",
     "VOM = 4.55  # $/MWh variable\n",
-    "fuel_cost = 24.57 # $/MWh_th per unit gas consumed\n",
+    "fuel_cost = 24.57  # $/MWh_th per unit gas consumed\n",
     "efficiency = 0.57"
    ]
   },
@@ -372,7 +372,9 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\n",
+    "    \"daily pattern\"\n",
+    "]\n",
     "# annual time-series availability of solar farm(just a simplified example)\n",
     "yearly_avail = pd.Series(list(solar_pattern) * 365, index=network.snapshots)"
    ]
@@ -391,12 +393,12 @@
    "outputs": [],
    "source": [
     "# Techno-economic parameters of the solar farm:\n",
-    "lifetime = 37.5 # years\n",
-    "interest = 0.05 # unit: -\n",
-    "CAPEX = 676570 # $/MW\n",
-    "FOM = 0.017275 * CAPEX # $/MW per year (1.7275% of CAPEX)\n",
-    "VOM = 0.0106 # $/MWh\n",
-    "fuel_cost = 0 # per unit of solar irradiation consumed"
+    "lifetime = 37.5  # years\n",
+    "interest = 0.05  # unit: -\n",
+    "CAPEX = 676570  # $/MW\n",
+    "FOM = 0.017275 * CAPEX  # $/MW per year (1.7275% of CAPEX)\n",
+    "VOM = 0.0106  # $/MWh\n",
+    "fuel_cost = 0  # per unit of solar irradiation consumed"
    ]
   },
   {
